fixed top logo overlaping in mobile version

--- a/sass/components/_heroEvent.scss
+++ b/sass/components/_heroEvent.scss
@@ -129,7 +129,7 @@
 				font-size: 22px;
 
 				&.event-name-short {
-					font-size: 36px;
+					font-size: 34px;
 					line-height: 48px;
 				}
 			}
@@ -139,7 +139,7 @@
 					font-size: 20px;
 
 					&.event-name-short {
-						font-size: 26px;
+						font-size: 22px;
 					  }
 				}
 			}
